<resources>
    <string name="app_name">Uni</string>
    <string name="login_message">Uni</string>

    <string name="login_button_text">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="not_member">Not a member?</string>
    <string name="sign_up_button_text">Sign up!</string>
    <string name="email_login_hint">Email Address</string>
    <string name="password_login_hint">Password</string>

    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="sign_up_button">Sign up</string>
    <string name="already_member">Already a member?</string>
    <string name="school_name_hint">School</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="interests_title">Interests</string>
    <string name="classes_title">Classes</string>
    <string name="academic_major_hint">Major</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="social_courses_title">Courses</string>
    <string name="social_groups_title">Groups</string>
    <string name="social_friends_title">Friends</string>
    <string name="adding_classes_button_text">Add Class</string>
    <string name="adding_interests_button_text">Add Interest</string>
    <string name="adding_groups_button_text">Add Group</string>
    <string name="adding_schools_button_text">Add School</string>
    <string name="done_adding">Done</string>

    <!-- Database Resources -->
    <string name="database">https://uni-database.firebaseio.com/</string>
    <string name="database_users_key">users</string>
    <string name="database_schools_key">schools</string>
    <string name="school_courses_key">courses</string>
    <string name="school_courses_enrolled_key">roster</string>
    <string name="school_interests_key">interests</string>
    <string name="student_roster_key">roster</string>
    <string name="user_email_key">email</string>
    <string name="user_name_key">name</string>
    <string name="user_id_key">uid</string>
    <string name="user_school_key">sid</string>
    <string name="user_courses_key">courses</string>
    <string name="user_interests_key">interests</string>
    <string name="user_groups_key">groups</string>
    <string name="user_friends_key">friends</string>
    <string name="users_requests_key">requests</string>
    <string name="users_picture_key">picture</string>


    <!-- Search Resources -->
    <string name="search_hint">Search by Interests!</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="users_friends_key">friends</string>
    <string name="home_frag_adding_info">chooseType</string>
    <string name="school_courses_name">name</string>
    <string name="user_schedule_key">schedule</string>
    <string name="social_hint">Filter Social...</string>
    <string name="scheduling_assistant">Scheduling Assistant</string>
</resources>
