<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="3"
    android:background="#ebfb8c00">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_message"
        android:id="@+id/welcomeMessage"
        android:layout_marginTop="104dp"
        android:soundEffectsEnabled="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="50sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="320dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailField"
        android:layout_marginTop="63dp"
        android:layout_below="@+id/welcomeMessage"
        android:layout_alignRight="@+id/passwordField"
        android:layout_alignEnd="@+id/passwordField"
        android:hint="@string/email_login_hint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="320dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordField"
        android:layout_below="@+id/emailField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:hint="@string/password_login_hint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text"
        android:id="@+id/loginButton"
        android:layout_below="@+id/passwordField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp" />
</RelativeLayout>